Register new user

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
 
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "strictPropertyInitialization": false
+    "strictPropertyInitialization": false,
   },
   "exclude": ["./build"]
 }
