--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "main.ts",
   "scripts": {
-    "tsc": "tsc",
     "dev": "NODE_ENV=development ts-node-dev main.ts",
+    "build": "tsc",
     "start": "NODE_ENV=production node build/main.js",
-    "build:css": "tailwindcss -i ./public/css/tailwind.css -o ./public/css/styles.css --watch"
+    "build:css:dev": "tailwindcss -i ./public/css/tailwind.css -o ./public/css/styles.css --watch",
+    "build:css": "tailwindcss -i ./public/css/tailwind.css -o ./public/css/styles.css --minify"
   },
   "keywords": [],
   "author": "",
