Install and configure sessions and flash

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 PORT=3000
+SECRET=secret
 
 DB_CONNECTION=postgres
 DB_HOST=localhost
@@ -6,3 +7,5 @@ DB_PORT=5432
 DB_DATABASE=realty
 DB_USERNAME=root
 DB_PASSWORD=secret
+
+DB_URL_SESSION=postgres://root:secret@localhost:5432/realty
