--- a/package.json
+++ b/package.json
@@ -14,15 +14,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "connect-flash": "^0.1.1",
+    "connect-pg-simple": "^8.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "pg": "^8.10.0",
     "pug": "^3.0.2",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.12"
+    "typeorm": "^0.3.12",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/connect-flash": "^0.0.37",
+    "@types/connect-pg-simple": "^7.0.0",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.6",
     "tailwindcss": "^3.2.7",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
