--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "main.ts",
   "scripts": {
-    "dev": "NODE_ENV=development ts-node-dev main.ts",
+    "dev": "NODE_ENV=development ts-node-dev --files ./main.ts",
     "build": "tsc",
     "start": "NODE_ENV=production node build/main.js",
     "build:css:dev": "tailwindcss -i ./public/css/tailwind.css -o ./public/css/styles.css --watch",
