--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,9 @@ DB_USERNAME=root
 DB_PASSWORD=secret
 
 DB_URL_SESSION=postgres://root:secret@localhost:5432/realty
+
+MAIL_HOST=mailpit
+MAIL_PORT=2525
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
+MAIL_FROM_ADDRESS=hi@mail.com
