--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "nodemailer": "^6.9.1",
     "pg": "^8.10.0",
     "pug": "^3.0.2",
     "reflect-metadata": "^0.1.13",
@@ -30,6 +31,7 @@
     "@types/connect-pg-simple": "^7.0.0",
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.6",
+    "@types/nodemailer": "^6.4.7",
     "tailwindcss": "^3.2.7",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
