--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "connect-pg-simple": "^8.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "express-session": "^1.17.3",
     "nodemailer": "^6.9.1",
     "pg": "^8.10.0",
@@ -32,6 +33,7 @@
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.6",
     "@types/nodemailer": "^6.4.7",
+    "@types/pug": "^2.0.6",
     "tailwindcss": "^3.2.7",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
