--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "connect-flash": "^0.1.1",
     "connect-pg-simple": "^8.0.0",
     "dotenv": "^16.0.3",
@@ -28,6 +29,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/connect-flash": "^0.0.37",
     "@types/connect-pg-simple": "^7.0.0",
     "@types/express": "^4.17.17",
