--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cloudinary": "^1.35.0",
     "connect-flash": "^0.1.1",
     "connect-pg-simple": "^8.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-session": "^1.17.3",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
     "pg": "^8.10.0",
     "pug": "^3.0.2",
@@ -36,6 +38,7 @@
     "@types/connect-pg-simple": "^7.0.0",
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.6",
+    "@types/multer": "^1.4.7",
     "@types/nodemailer": "^6.4.7",
     "@types/pug": "^2.0.6",
     "tailwindcss": "^3.2.7",
