--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "main.ts",
   "scripts": {
-    "dev": "NODE_ENV=development ts-node-dev --files ./main.ts",
+    "dev": "cross-env NODE_ENV=development ts-node-dev --files ./main.ts",
     "db:seed": "ts-node ./database/seeder.ts",
     "db:session": "ts-node ./database/session.ts",
     "build": "rm -rf ./build && tsc && cp -r ./views ./build",
-    "start": "NODE_ENV=production node build/main.js",
+    "start": "cross-env NODE_ENV=production node build/main.js",
     "dev:css": "tailwindcss -i ./public/css/tailwind.css -o ./public/css/styles.css --watch",
     "build:css": "tailwindcss -i ./public/css/tailwind.css -o ./build/public/css/styles.css --minify"
   },
@@ -17,32 +17,36 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
-    "cloudinary": "^1.35.0",
+    "cloudinary": "^1.37.0",
     "connect-flash": "^0.1.1",
-    "connect-pg-simple": "^8.0.0",
-    "dotenv": "^16.0.3",
+    "connect-pg-simple": "^9.0.0",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-session": "^1.17.3",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.1",
-    "pg": "^8.10.0",
+    "nodemailer": "^6.9.3",
+    "pg": "^8.11.0",
     "pug": "^3.0.2",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.12",
+    "typeorm": "^0.3.16",
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@prettier/plugin-pug": "^2.5.1",
     "@types/bcrypt": "^5.0.0",
     "@types/connect-flash": "^0.0.37",
     "@types/connect-pg-simple": "^7.0.0",
     "@types/express": "^4.17.17",
-    "@types/express-session": "^1.17.6",
+    "@types/express-session": "^1.17.7",
     "@types/multer": "^1.4.7",
-    "@types/nodemailer": "^6.4.7",
+    "@types/nodemailer": "^6.4.8",
     "@types/pug": "^2.0.6",
-    "tailwindcss": "^3.2.7",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.3.0",
+    "tailwindcss": "^3.3.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.9.5"
+    "typescript": "^5.1.3"
   }
 }
