--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "db:session": "ts-node ./database/session.ts",
     "build": "rm -rf ./build && tsc && cp -r ./views ./build",
     "start": "cross-env NODE_ENV=production node build/main.js",
-    "dev:css": "tailwindcss -i ./public/css/tailwind.css -o ./public/css/styles.css --watch",
-    "build:css": "tailwindcss -i ./public/css/tailwind.css -o ./build/public/css/styles.css --minify"
+    "dev:tailwind": "tailwindcss -i ./public/css/tailwind.css -o ./public/css/styles.css --watch",
+    "build:tailwind": "tailwindcss -i ./public/css/tailwind.css -o ./build/public/css/styles.css --minify"
   },
   "keywords": [],
   "author": "",
